--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "zstdlib"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.12",
     "Development Status :: 5 - Production/Stable",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
 ]
@@ -14,7 +14,7 @@ keywords = ["remote", "pipe"]
 license = {text = "GPLv3"}
 description = "A set of useful python utilities"
 urls = {Homepage = "https://github.com/zwimer/zstdlib"}
-requires-python = ">= 3.10"
+requires-python = ">= 3.12"
 # dependencies = [
 #     # Client
 #     "zstandard[cffi]",
@@ -63,7 +63,7 @@ disable = [
 
 [tool.black]
 line-length = 110
-target-version = ["py310", "py311", "py312", "py313"]
+target-version = ["py312", "py313"]
 
 [tool.ruff]
 line-length = 110
