--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,15 +19,13 @@ repos:
     rev: v3.18.0
     hooks:
     -   id: pyupgrade
-        args: [--py312-plus]
+        args: [--py313-plus]  # Target Python 3.14 when pyupgrade supports it
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.11.2
     hooks:
     -   id: mypy
         additional_dependencies: [types-requests, types-waitress]
         args: [--enable-incomplete-feature=NewGenericSyntax]
-
-
 
 #
 # Fail fast
