--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,9 @@
+default_language_version:
+  python: python3.14
+
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
+    rev: v6.0.0
     hooks:
     -   id: check-added-large-files
     -   id: check-ast
@@ -16,29 +19,28 @@ repos:
     -   id: mixed-line-ending
     -   id: trailing-whitespace
 -   repo: https://github.com/asottile/pyupgrade
-    rev: v3.18.0
+    rev: v3.21.0
     hooks:
     -   id: pyupgrade
-        args: [--py313-plus]  # Target Python 3.14 when pyupgrade supports it
+        args: [--py314-plus]
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.11.2
+    rev: v1.18.2
     hooks:
     -   id: mypy
         additional_dependencies: [types-requests, types-waitress]
-        args: [--enable-incomplete-feature=NewGenericSyntax]
 
 #
 # Fail fast
 #
 
 -   repo: https://github.com/abravalheri/validate-pyproject
-    rev: v0.20.2
+    rev: v0.24.1
     hooks:
     - id: validate-pyproject
       fail_fast: true
 
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
+    rev: v6.0.0
     hooks:
     # Syntax
     -   id: check-toml
@@ -49,7 +51,7 @@ repos:
         fail_fast: true
 
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
+    rev: v6.0.0
     hooks:
     -   id: check-ast
         fail_fast: true
@@ -65,7 +67,7 @@ repos:
 
 # Last modifier: Coding Standard
 -   repo: https://github.com/psf/black
-    rev: 24.10.0
+    rev: 25.9.0
     hooks:
     -   id: black
 
@@ -85,23 +87,23 @@ repos:
     -   id: rst-inline-touching-normal
 
 -   repo: https://github.com/jendrikseipp/vulture
-    rev: v2.13
+    rev: v2.14
     hooks:
       - id: vulture
 
 -   repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.6.9
+    rev: v0.14.2
     hooks:
     - id: ruff
 
 -   repo: https://github.com/pycqa/pylint
-    rev: v3.3.1
+    rev: v4.0.2
     hooks:
     -   id: pylint
         args: [--disable=import-error]
 
 -   repo: https://github.com/PyCQA/bandit
-    rev: 1.7.10
+    rev: 1.8.6
     hooks:
     - id: bandit
       additional_dependencies: [".[toml]"]
